<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/speed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="12dp"
        android:paddingRight="12dp" >

        <TextView
            android:id="@+id/status"
            style="?android:attr/listSeparatorTextViewStyle"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/cpu_info_list_header"
            android:textColor="@color/mint_green" />

        <GridView
            android:id="@+id/cpu_info_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@null"
            android:numColumns="2"
            android:paddingLeft="10dp" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="12dp"
        android:paddingRight="12dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/ui_header_temperatures"
                style="?android:attr/listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/info_temperatures"
                android:textColor="@color/mint_green" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/temp_cpu_text"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center_vertical|right"
                    android:text="@string/info_temp_cpu"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/temp_cpu_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="left"
                    android:textSize="25sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/temp_batt_text"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center_vertical|right"
                    android:text="@string/info_temp_batt"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/temp_batt_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="left"
                    android:textSize="25sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/ui_header_total_state_time"
                style="?android:attr/listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/total_state_time"
                android:textColor="@color/mint_green" />

            <TextView
                android:id="@+id/ui_total_state_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center_horizontal"
                android:padding="7dp"
                android:textColor="@color/mint_green"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/ui_header_additional_states"
                style="?android:attr/listSeparatorTextViewStyle"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/unused_cpu_states"
                android:textColor="@color/mint_green"
                android:visibility="gone" />

            <TextView
                android:id="@+id/ui_additional_states"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:visibility="gone" />

            <TextView
                style="?android:attr/listSeparatorTextViewStyle"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/time_in_state"
                android:textColor="@color/mint_green" />

            <LinearLayout
                android:id="@+id/ui_states_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="10dp" />

            <TextView
                android:id="@+id/ui_states_warning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#551111"
                android:fontFamily="sans-serif-condensed"
                android:padding="15dp"
                android:text="@string/no_states_file_found"
                android:textColor="@color/mint_green"
                android:textSize="20sp"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>