<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="260dp"
    android:background="#191919"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/status"
                style="?android:attr/listSeparatorTextViewStyle"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/cpu_info_list_header"
                android:textColor="@color/mint_green" />

            <ListView
                android:id="@+id/cpu_info_list"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:clickable="false"
                android:divider="@null"
                android:focusable="false"
                android:paddingLeft="10dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/ui_header_temperatures"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/info_temperatures"
            android:textColor="@color/mint_green" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/temp_cpu_text"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center_vertical|right"
                android:text="@string/info_temp_cpu"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/temp_cpu_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed"
                android:gravity="left"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/temp_batt_text"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center_vertical|right"
                android:text="@string/info_temp_batt"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/temp_batt_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed"
                android:gravity="left"
                android:textSize="25sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>